# tdt4140-washlists

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  docker_setup.md
backend/: Dockerfile  README.md  data.yaml  example-data.yaml  pyproject.toml  run.sh
backend/Dormroom/: models.py  serializer.py  views.py
backend/Dormroom/migrations/: 0002_auto_20200227_2157.py  0003_merge_20200228_1005.py  0004_auto_20200229_1420.py
backend/SIFUser/: mixins.py  models.py  urls.py  views.py
backend/SIFUser/migrations/: 0003_auto_20200227_2157.py
backend/StudentVillage/: models.py  serializer.py
backend/StudentVillage/migrations/: 0002_auto_20200221_1058.py  0003_studentvillage_templatewashlist.py  0004_auto_20200224_1401.py  0006_auto_20200229_1420.py
backend/Washlist/: __init__.py  admin.py  tests.py  views.py
backend/Washlist/migrations/: 0001_initial.py  0002_auto_20200227_2219.py  0003_auto_20200227_2222.py  0004_auto_20200229_1420.py  0005_auto_20200305_1154.py  0006_auto_20200305_1252.py  0007_auto_20200309_1422.py  0008_auto_20200417_0033.py
backend/Washlist/models/: Templates.py  WashLists.py
backend/Washlist/signals/: TemplateListItem.py
backend/fixtures/: testdata.yaml
backend/sif_vaskelister/: settings.py  urls.py
backend/washlist/: apps.py  jobs.py  serializer.py  tests.py  urls.py
backend/washlist/migrations/: 0001_initial.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.jest.json  user.js
frontend/api/: auth.ts  defaults.ts  index.spec.ts  index.ts  queryString.spec.ts  queryString.ts
frontend/context/: appContext.tsx
frontend/pages/: _app.tsx  residents.tsx  user-washlist.tsx
frontend/sif_vaskelister/: .eslintrc.js  .gitignore  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  setupTests.ts  tsconfig.json
frontend/types/: dorm-types.ts  user-types.ts  village-types.ts  washlist-types.ts
sif_vaskelister/: docker-compose.yml  groups.yaml  manage.py  pyproject.toml  run.sh
sif_vaskelister/Dorm/: apps.py  models.py
sif_vaskelister/Dormroom/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
sif_vaskelister/Dormroom/migrations/: 0001_initial.py  0002_auto_20200221_1058.py  0004_auto_20200229_1420.py  0005_auto_20200305_1252.py
sif_vaskelister/SIFUser/: admin.py  apps.py  mixins.py  models.py  serializer.py  tests.py  urls.py  views.py
sif_vaskelister/SIFUser/fixtures/: Users.yaml
sif_vaskelister/SIFUser/migrations/: 0001_initial.py  0002_user_dorm.py  0003_auto_20200221_1058.py  0004_auto_20200224_1152.py  0005_merge_20200228_1005.py  0006_auto_20200229_1420.py
sif_vaskelister/StudentVillage/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
sif_vaskelister/StudentVillage/migrations/: 0001_initial.py  0002_auto_20200227_2219.py  0003_studentvillage_name.py  0003_studentvillage_templatewashlist.py  0005_merge_20200228_1005.py  0006_auto_20200229_1420.py  0007_studentvillage_managers.py
sif_vaskelister/fixtures/: Users.yml
sif_vaskelister/sif_vaskelister/: asgi.py  settings.py  urls.py  wsgi.py
sif_vaskelister/washlist/: __init__.py  admin.py  apps.py  jobs.py  models.py  serializer.py  tests.py  urls.py  views.py
sif_vaskelister/washlist/migrations/: 0001_initial.py  0002_auto_20200227_2219.py  0003_auto_20200227_2222.py  0004_auto_20200229_1420.py  0005_auto_20200305_1154.py  0006_auto_20200305_1252.py  0007_auto_20200309_1422.py
sif_vaskelister/washlist/models/: Templates.py  WashLists.py
sif_vaskelister/washlist/signals/: TemplateListItem.py
(+113 files in other folders)
