[tool.poetry]
name = "sif_vaskelister"
version = "0.1.0"
description = "A web cleaning management system"
authors = ["Aksel Lenes <aksel.lenes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
