[tool.poetry]
name = "sif_vaskelister"
version = "0.1.0"
description = "A web cleaning management system"
authors = ["Aksel Lenes <aksel.lenes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
django-oauth-toolkit = "^1.2.0"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pyyaml = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
